--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=demo
 ## Create a folder on c:// with name h2db
 ## H2 will automatically create my_data_file
 #spring.datasource.url = jdbc: h2: mem: h2db
-spring.datasource.url=jdbc:h2:file:C:/h2db/task_data
+spring.datasource.url=jdbc:h2:file:./task_data
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
